# sftp-fastdl

./: Cargo.toml  Dockerfile  README.md
src/: config.rs  main.rs  sftp.rs
