[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
async-trait = "0.1.83"
axum = "0.7"
axum-extra = { version = "0.9.4", features = ["async-read-body"] }
russh = "0.46"
russh-sftp = "2.0.5"
russh-keys = "0.46"
tokio = { version = "1", features = ["full"] }
config = { version = "0.14.0", default-features = false, features = [] }
serde = { version = "1.0", features = ["derive"] }
camino = "1"
async-compression = { version = "0.4.17", features = ["tokio", "bzip2"] }